<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/colorAccent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/dismiss"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_close" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_chrome"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="18dp"
                android:layout_marginBottom="15dp"
                android:text="@string/app_description" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:src="@drawable/ic_github"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="14dp"
                android:text="@string/app_github_description" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="14dp"
                android:layout_marginBottom="15dp"
                android:linksClickable="true"
                android:autoLink="web"
                android:text="@string/githubrepo" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:src="@drawable/ic_substract"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textSize="12dp"
                android:text="@string/developer_name" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textSize="12dp"
                android:text="@string/developer_links" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/lightGray"
                android:textSize="12dp"
                android:text="@string/app_lastupdate" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
